# qcomp-fin

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json  qcomp-fin.code-workspace  quantum_grid_search_results.csv  requirements.txt
__marimo__/session/: notebook.py.json
data/: close_prices.csv  esg.csv  grid_classical_milp_checkpoint.json  grid_classical_search_checkpoint.json  grid_search_checkpoint.json  gridsearch_classical_milp.csv  gridsearch_classical_portfolio.csv  gridsearch_quantum_annealing_classical.csv  gridsearch_quantum_annealing_quantum.csv  gridsearch_quantum_gatebased_y_simulatedbifrucation.csv  latest_benchmark2026-03-31.txt  latest_benchmark_2026.txt  prices.csv  warm_9e1702b78ad1fe60ac9ddee3fc1cd7eb_p1.pkl  warm_9e1702b78ad1fe60ac9ddee3fc1cd7eb_p2.pkl  warm_bc34bb0be8087e8bda43bb350cf8169e_p1.pkl  warm_bc34bb0be8087e8bda43bb350cf8169e_p2.pkl
data/analog_saves/: analog_0112eed93af0fcd23300cc999108d5c9.pkl  analog_0978c0709dff02c332bae86fe5f1b559.pkl  analog_49e2d779d31ef1e2978c27d5ffb1e66b.pkl  analog_58691b1e1bdd83eacf12799a8663d055.pkl  analog_5ac2aae38582dca99f5ea327ae9498d5.pkl  analog_5f17136a83adb89b135b66010827f691.pkl  analog_5fd1ab518c5a23b6f448257b2096ee76.pkl  analog_60b77b1abb3aaf848dd31f62156297a2.pkl  analog_704da12ab46b052c2f179f903a8ea42e.pkl  analog_724b85e0ef75fb4cc9c38f71b66f6574.pkl  analog_72bfd1964660555c55eb80e96620c884.pkl  analog_79b32cdf8b255ed05d7cf7aaaa0181aa.pkl  analog_7abc4a3d510f832d367420a0e441b2e5.pkl  analog_8c0cb209bcb8a700413a734bb31b7188.pkl  analog_8cc6f42f6470d9fac5b64d26bb532f4d.pkl  analog_8dd44d3d0ca64c685a6297c2c8a4dd72.pkl  analog_8f34bd319e49b8bd16e00f863b69084b.pkl  analog_905f02fd4df8341ce12aeb312ed4c34b.pkl  analog_9870cc14e8240bfccd308907c4f0bb70.pkl  analog_9dcca50a2b079d9e100e7ed009df46ec.pkl  analog_aa161ed78c60802ed015fb7ef43c7f9a.pkl  analog_abf66f55b5af174aa0ec517001036a79.pkl  analog_b0cb98b580d1841a60b6549440272b22.pkl  analog_b4fc9387d0e259acc1df4f5f0df147de.pkl  analog_bbad8717f6b304d884101a0b0da49e49.pkl  (+14 more)
docs/: gpu_issues.md
etc/: config.py
notebooks/: final_benchmark_appendix.txt
scripts/: uv_create_all.sh  uv_sync_all.sh
src/: classical_baseline.py  config.py  controller.py  data_pipeline.py  main.py  qubo_builder.py
test/: check_cuquantum.py
tests/: test_minimizer.py  test_pipeline.py  test_portfolio_formulation.py  test_quantum_engine.py
(+53 files in other folders)
