[project]
name = "qcomp-fin"
version = "0.1.0"
description = "Quantum Finance QAOA Optimization with Dual-Venv GPU Support"
readme = "README.md"
requires-python = ">=3.12"

# SHARED CORE: Libraries needed by both Architect and Engine
dependencies = [
    "qiskit>=1.1.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "packaging>=26.0",
    "jijmodeling>=2.3.1",
    "yfinance",
    "openjij>=0.11.6",
    "pytest>=9.0.2",
    "altair>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
    "qiskit>=1.1.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "packaging>=26.0",
    "openjij>=0.11.6",
]

[project.optional-dependencies]
#  ARCHITECT (Modeling & Dashboards) -> .venv-qam
modeling = [
    "qamomile[qiskit]>=0.10.0",
    "marimo",
    "plotly",
    "matplotlib>=3.8.0",
    "yfinance>=0.2.0",
    "pyportfolioopt>=1.5.0",
]

# ENGINE (GPU Execution) -> .venv-gpu
gpu = [
    "qiskit-aer-gpu>=0.15.1",
    "cuquantum-cu12",
    "custatevec-cu12>=1.12.0",
    "cutensornet-cu12>=2.11.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true # Set to true so you can use 'uv pip install -e .'

[tool.setuptools.packages.find]
where = ["src"]

# Note: We removed the qiskit-aer overrides/constraints because 
# .venv-gpu will strictly use qiskit-aer-gpu.

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
